@@ -2,7 +2,7 @@
 #	Copyright (c) 1990-95 by M. Stephenson
 # NetHack may be freely redistributed.  See license for details.
 #
-# Edited on 4/3/18 by NullCGT
+# Edited on 4/15/18 by NullCGT
 #
 #	The dungeon description file for the "standard" 3.1 NetHack.
 #
@@ -24,7 +24,7 @@ LEVELDESC:	roguelike
 LEVEL:		"oracle" "O" @ (5, 5)
 LEVALIGN:	neutral
 CHAINBRANCH:	"Sokoban" "oracle" + (1, 0) up
-RNDLEVEL:	"statuary" "S" @ (18, 2) 60
+LEVEL:		"statuary" "S" @ (18, 2)
 RNDLEVEL:	"bigrm" "B" @ (10, 3) 40 10
 CHAINBRANCH:	"The Quest" "oracle" + (6, 2) portal
 BRANCH:		"Fort Ludios" @ (18, 4) portal
